消息中心升级版本为1.2.0；增加极光推送相关业务功能