@@ -3,21 +3,21 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.diligrp</groupId>
     <artifactId>message</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
-    <description>message</description>
+    <version>1.2.0-SNAPSHOT</version>
+    <name>消息中心</name>
+    <description>消息应用程序</description>
     <packaging>jar</packaging>
 
     <!-- 父工程定义 -->
     <parent>
         <artifactId>diligrp-message</artifactId>
         <groupId>com.diligrp</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>13</java.version>
-
         <!--  MyBatis Generator  -->
         <!--  Java接口和实体类  -->
         <targetJavaProject>${basedir}/src/main/java</targetJavaProject>
@@ -32,6 +32,22 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>2.2.0.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba</groupId>
+                    <artifactId>fastjson</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
         <!-- if you enable json support in spring mvc. -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -42,7 +58,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.3.2</version>
+            <version>5.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
@@ -68,18 +84,22 @@
             <groupId>com.alibaba</groupId>
             <version>1.2.60</version>
         </dependency>
+        <!-- 极光推送 -->
+        <dependency>
+            <groupId>cn.jpush.api</groupId>
+            <artifactId>jpush-client</artifactId>
+            <version>3.4.7</version>
+        </dependency>
         <!-- ===============  spring boot starters  =============== -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
-
         <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -94,24 +114,64 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!-- 内部包  -->
-
-        <!-- 公共信息 -->
+        <dependency>
+            <groupId>com.diligrp</groupId>
+            <artifactId>message-sdk</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.dili</groupId>
-            <artifactId>commons</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <artifactId>commons-web</artifactId>
+            <version>1.3.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dili</groupId>
+            <artifactId>commons-server</artifactId>
+            <version>1.3.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.dili</groupId>
             <artifactId>uap-sdk</artifactId>
-            <version>2.8.0-SNAPSHOT</version>
+            <version>2.9.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>fastjson</artifactId>
                     <groupId>com.alibaba</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>ss-beetl</artifactId>
+                    <groupId>com.dili</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>ss-redis</artifactId>
+                    <groupId>com.dili</groupId>
+                </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <artifactId>ss-core</artifactId>
+            <groupId>com.dili</groupId>
+            <version>${sharp-sword.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>ss-beetl</artifactId>
+            <groupId>com.dili</groupId>
+            <version>${sharp-sword.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>ss-redis</artifactId>
+            <groupId>com.dili</groupId>
+            <version>${sharp-sword.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dili</groupId>
+            <artifactId>ss-uid</artifactId>
+            <version>${sharp-sword.version}</version>
         </dependency>
     </dependencies>
 
@@ -132,34 +192,12 @@
                 <version>3.8.1</version>
                 <!-- 编译JDK版本 -->
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                     <parameters>true</parameters>
-                    <compilerArgs>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -171,24 +209,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.7</version>
-                <configuration>
-                    <configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
-                    <overwrite>true</overwrite>
-                    <verbose>true</verbose>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.dili</groupId>
-                        <artifactId>ss-mbg</artifactId>
-                        <version>${sharp-sword.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
